welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: ')' expected but '<-' found.
		if (day<- 1 to 5){
                       ^alarmClock:9: error: illegal start of simple expression
	}
        ^alarmClock:10: error: ')' expected but '<-' found.
	else { 		if (day<- 1 to 5){
                               ^alarmClock:15: error: illegal start of simple expression
		}
                ^